activity_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activity-service
spec:
  selector:
    app: activity-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
