activity_service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activity-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: activity.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: activity-service
                port:
                  number: 80
